--- a/client/src/pages/login/login.styles.css
+++ b/client/src/pages/login/login.styles.css
@@ -37,13 +37,15 @@
 
 #login-button:hover {
     transition: .2s;
-    width: 230px;
-    height: 33px;
     background-color: rgb(98, 167, 114);
 }
 
-#login-button:active {
-    transform: translate(0px, 3px);
+
+#login-button:disabled,
+#login-button[disabled] {
+    background-color: #cccccc;
+    color: #666666;
+    cursor: default;
 }
 
 .signup-link {
