--- a/client/src/pages/cart/cart.styles.css
+++ b/client/src/pages/cart/cart.styles.css
@@ -1,26 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .cart-page {
-    display: flex;
     width: 100vw;
+    min-height: 85vh;
+}
+
+.empty {
     height: 85vh;
 }
 
-.cart-container {
-    white-space: initial;
+#empty-cart-text {
     display: flex;
+    height: 100%;
+    font-family: 'Montserrat', sans-serif;
     justify-content: center;
     align-items: center;
-    margin: auto;
-    width: 90vw;
-    height: 80vh;
+    font-weight: 800;
 }
 
-#cart-text {
+#total-price {
     font-family: 'Montserrat', sans-serif;
-    color: black;
-    margin-bottom: 20px;
-    font-weight: 800;
-    font-size: 3.5vh;
-    margin: 15px;
+    font-size: 30px;
+    padding: 10px;
+}
+
+#checkout-button {
+    margin: 10px auto;
+    background-color: rgb(42, 56, 56);
+    color: white;
+    border: none;
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .2s;
+
+}
+
+#checkout-button:hover {
+    background-color: rgb(54, 126, 76);
 }
