--- a/client/src/pages/home/homePage.styles.css
+++ b/client/src/pages/home/homePage.styles.css
@@ -15,12 +15,11 @@
     color: black;
     font-weight: 800;
     font-size: 3.5vh;
-    margin: 10px;
+    margin: 50px 10px 10px 10px;
 }
 
 #secondary-title {
     color: black;
     font-weight: 600;
     font-size: 2.5vh;
-    margin: 5px;
 }
